@@ -30,3 +30,5 @@ Bugfixes and enhancements:
 
   - Use java.awt.FileDialog on Mac OS X?
 
+  - Add -Dsun.java2d.opengl=true to options, and add option to toggle it
+    (Java 1.5+ only)
